# boardgames

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CTestCustom.cmake  Doxyfile.in  LICENSE  README.md  package-lock.cmake
cmake/: AddGoogleTest.cmake  CodeCoverage.cmake  DeployQt.cmake  prjexe.cmake  prjlib.cmake  prjobjlib.cmake  prjqt.cmake  prjstandardpost.cmake  prjstandardpre.cmake  prjtest.cmake
data/: memcheck.supp  muehle.desktop  pic.qrc
doc/: MuehleActivity.uxf  MuehleClass.uxf
docs/: Changelog.md  LICENSE_tiddlywiki  MuehleActivity.uxf  MuehleClass.uxf  Muehle_Anleitung.md
docs/manuals/: muehle_de.md  muehle_en.md  version_footer.md.in
pic/: pic.qrc
src/: CMakeLists.txt
src/boardgame/: CMakeLists.txt  alpha_beta.cpp  alpha_beta.h  boardgame_lib.h  boardgame_ui.cpp  boardgame_ui.h  main_loop.cpp  main_loop.h  move_list.cpp  move_list.h  move_list_ui.cpp  move_list_ui.h  pieces_n_fields.cpp  pieces_n_fields.h  version.h.in
src/boardgame_qml/: CMakeLists.txt  Confirm_Button.qml  Engine_Button.qml  Engine_Settings.qml  Field.qml  Framed_Label.qml  HSL_Sliders.qml  Move_Button.qml  Move_List_Control.qml  Move_List_Entry.qml  Move_List_Root.qml  Piece.qml  Piece_Column_Box.qml  Piece_Row_Box.qml  boardgame_qml.qrc  field_qml.cpp  field_qml.h  move_list_qml.cpp  move_list_qml.h  multi_move_list_qml.cpp  multi_move_list_qml.h  piece_qml.cpp  piece_qml.h
src/muehle/: CMakeLists.txt  muehle.cpp  muehle.h  muehle_fsm.cpp  muehle_fsm.h  muehle_fsm_action_handler.cpp  muehle_fsm_action_handler.h  muehle_lib.h  muehle_state.cpp  muehle_state.h  muehleui.h
src/muehle_qml/: CMakeLists.txt  Muehle_Board.qml  Muehle_Control.qml  main.cpp  muehle.qrc  muehle_qml.cpp  muehle_qml.h
src/muehle_qml_game/: CMakeLists.txt  ImportDummy.qml  main.cpp
src/muehleqml/: CMakeLists.txt  MuehleBoard.qml  MuehleControl.qml  MuehleDestination.qml  MuehlePiece.qml  PieceCBox.qml  PieceRBox.qml  main.cpp  muehle.qrc  muehlefieldqml.cpp  muehlefieldqml.h  muehlepieceqml.cpp  muehlepieceqml.h  muehleqml.cpp  muehleqml.h
src_muehle/: CMakeLists.txt  muehle.cpp  muehle.h  muehlecontrol.h  muehleelements.cpp  muehleelements.h  muehlefield.cpp  muehlefield.h  muehlefieldgroup.cpp  muehlefieldgroup.h  muehlefieldmodel.cpp  muehlefieldmodel.h  muehlefieldui.cpp  muehlefieldui.h  muehlefieldview.cpp  muehlefieldview.h  muehlepiece.cpp  muehlepiece.h  muehlepiecegroup.cpp  muehlepiecegroup.h  muehlepiecemodel.cpp  muehlepiecemodel.h  muehlepieceui.cpp  muehlepieceui.h  muehlepieceview.cpp  muehlepieceview.h  muehleui.h
src_muehleqml/: CMakeLists.txt  MuehleBoard.qml  MuehleDestination.qml  MuehlePiece.qml  muehlefieldqml.cpp  muehlefieldqml.h  muehlefieldviewqml.cpp  muehlefieldviewqml.h  muehlepieceqml.cpp  muehlepieceqml.h  muehlepieceviewqml.cpp  muehlepieceviewqml.h  muehleqml.cpp  muehleqml.h  resources.qrc
src_muehleqmlstandalone/: CMakeLists.txt  MuehleControl.qml  main.cpp  muehlecontrol.qrc  muehlecontrolqml.cpp  muehlecontrolqml.h
test_gmock/: CMakeLists.txt  main.cpp
test_muehle/: CMakeLists.txt  testmuehle.cpp  testmuehle.h
tests/: CMakeLists.txt
tests/boardgame/: CMakeLists.txt  alpha_beta.test.cpp  move_list.test.cpp  move_list.test.h  move_list_detail.test.cpp  move_list_detail.test.h
tests/boardgame_qml/: CMakeLists.txt  Move_List_Qml_Test.qml  boardgames_qml_test.cpp  move_list_qml.test.cpp  move_list_qml.test.h  move_list_qml_test.qrc  multi_move_list_qml.test.cpp  multi_move_list_qml.test.h
tests/muehle/: CMakeLists.txt  muehle.test.cpp  muehle.test.h  muehle_fsm.test.cpp  muehle_fsm.test.h  muehle_state.test.cpp  muehle_state.test.h
tests/muehle_qml/: CMakeLists.txt  muehle_qml_test.cpp
tools/: appimage_helper.sh  muehle.vbs  muehle_installer.sh  qmllint_helper.sh
tools/docker-gcc-aqt/: Dockerfile  install.sh
